fix: harden stateful chat and demo workflows (#166)